Run basic Cowboy websocket demo from within the rebar3 project

--- a/rebar.config
+++ b/rebar.config
@@ -1,2 +1,8 @@
 {erl_opts, [debug_info]}.
-{deps, []}.
+{deps, [{cowboy, "1.0.4"}]}.
+
+{relx, [
+        {release, {tracker, "0.1.0"}, [tracker]},
+        {dev_mode, true},
+        {include_erts, false}
+       ]}.
