--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,8 @@
 {erl_opts, [debug_info]}.
-{deps, [{cowboy, "1.0.4"}]}.
+{deps, [
+        {cowboy, "1.0.4"},
+        {jsone, "1.2.6"}
+       ]}.
 
 {relx, [
         {release, {tracker, "0.1.0"}, [tracker]},
