--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,8 @@
 {erl_opts, [debug_info]}.
 {deps, [
         {cowboy, "1.0.4"},
-        {jsone, "1.2.6"}
+        {jsone, "1.2.6"},
+        {qdate, "0.4.3"}
        ]}.
 
 {relx, [
