--- a/rebar.config
+++ b/rebar.config
@@ -1,8 +1,15 @@
-{erl_opts, [debug_info]}.
+{erl_opts, [
+    debug_info,
+    {d, 'WITH_JIFFY'},
+    {parse_transform, lager_transform}
+]}.
+
 {deps, [
         {cowboy, "1.0.4"},
         {jsone, "1.2.6"},
-        {qdate, "0.4.3"}
+        {qdate, "0.4.3"},
+        {couchbeam, "1.3.1"},
+        {lager, "3.2.1"}
        ]}.
 
 {relx, [
@@ -10,3 +17,5 @@
         {dev_mode, true},
         {include_erts, false}
        ]}.
+
+
