--- a/rebar.config
+++ b/rebar.config
@@ -9,7 +9,8 @@
         {jsone, "1.2.6"},
         {qdate, "0.4.3"},
         {couchbeam, "1.3.1"},
-        {lager, "3.2.1"}
+        {lager, "3.2.1"},
+        {fusco, ".*", {git, "git://github.com/esl/fusco.git", {branch, "master"}}}
        ]}.
 
 {relx, [
