--- a/rebar.config
+++ b/rebar.config
@@ -10,7 +10,8 @@
         {qdate, "0.4.3"},
         {couchbeam, "1.3.1"},
         {lager, "3.2.1"},
-        {fusco, ".*", {git, "git://github.com/esl/fusco.git", {branch, "master"}}}
+        {fusco, ".*", {git, "git://github.com/esl/fusco.git", {branch, "master"}}},
+        {shotgun, "0.2.3", {git, "git://github.com/inaka/shotgun.git", {branch, "master"}}}
        ]}.
 
 {relx, [
