--- a/rebar.config
+++ b/rebar.config
@@ -11,7 +11,7 @@
         {couchbeam, "1.3.1"},
         {lager, "3.2.1"},
         {fusco, ".*", {git, "git://github.com/esl/fusco.git", {branch, "master"}}},
-        {shotgun, "0.2.3", {git, "git://github.com/inaka/shotgun.git", {branch, "master"}}}
+        {shotgun, "0.2.3", {git, "git://github.com/inaka/shotgun.git", {tag, "0.2.3"}}}
        ]}.
 
 {relx, [
